--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "css-loader": "^0.28.4",
@@ -19,9 +20,11 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^1.3.3",
     "postcss-smart-import": "^0.7.4",
+    "redux-actions": "^2.2.1",
     "redux-form": "^7.0.1",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.6.1",
