--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
+    "cleanse-html": "0.0.5",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
     "eslint-plugin-react": "^7.0.1",
