--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^1.3.3",
     "postcss-smart-import": "^0.7.4",
+    "react-height": "^3.0.0",
     "redux-actions": "^2.2.1",
     "redux-form": "^7.0.1",
     "resolve-url-loader": "^2.0.2",
