--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "postcss-loader": "^1.3.3",
     "postcss-smart-import": "^0.7.4",
     "react-height": "^3.0.0",
+    "react-width": "^0.1.8",
     "redux-actions": "^2.2.1",
     "redux-form": "^7.0.1",
+    "reselect": "^3.0.1",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
