--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-cssnext": "^2.11.0",
     "postcss-loader": "^1.3.3",
     "postcss-smart-import": "^0.7.4",
+    "random-words": "0.0.1",
     "react-height": "^3.0.0",
     "react-width": "^0.1.8",
     "redux-actions": "^2.2.1",
